manifests/0000_10_networkpolicy_99_namespace_default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: openshift-authentication-operator
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
